# pache

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.release.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml
.github/workflows/: release.yml
_bmad-output/analysis/: brainstorming-session-2026-01-23.md  code-review-5-2-comprehensive.md  code-review-5-2-reviews-service.md  code-review-5-3-submit-review.md  production-srs-design.md  production-srs-grading-research.md  production-srs-idea-and-data-sources.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization.md  2-1-kanji-model-seed.md  2-2-browse-view-kanji.md  3-1-vocab-tag-linking-models.md  3-2-create-vocabulary.md  3-3-browse-filter-vocabulary.md  4-1-lesson-queue-model-add-items.md  4-2-remove-items-from-queue.md  4-3-batch-complete-lessons.md  5-1-srs-core-logic-review-model.md  5-2-view-items-due-for-review.md  5-3-submit-review-stage-progression.md  5-4-resurrect-burned-items.md
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  prd.md  product-brief-kanji-srs-2026-01-23.md  project-context.md
alembic/: env.py
alembic/versions/: 001_create_kanji_table.py  002_create_users_sessions.py  003_create_vocab_tags_tables.py  004_create_lesson_queue.py  005_create_user_item_progress.py  006_create_review_log.py  007_add_index_next_review_at.py  008_add_kanji_frequency.py  009_vocab_reading_to_readings_json.py  010_add_vocab_sentences.py  011_add_kanji_components.py  012_add_user_password.py  013_add_user_is_admin.py  014_add_sentences.py  014_add_user_review_mode.py  015_add_vocab_source_url.py  016_add_sentences.py  017_add_user_sentences_enabled.py  018_add_grammar_points.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: backfill_grammar.py  seed_kanji.py  seed_testdata.py
src/: __init__.py  database.py  logging.py  main.py  settings.py
tests/: conftest.py  test_database.py  test_main.py
(+147 files in other folders)
