[project]
name = "pache"
version = "1.6.0"
description = "pache - Social SRS kanji learning platform with a shared item pool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncmy>=0.2.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "uvicorn[standard]>=0.30.0",
    "cryptography>=41.0.0",
    "jamdict>=0.1a11",
    "jamdict-data>=1.5.0",
    "tqdm>=4.66.0",
    "orq-ai-sdk>=4.9.24",
    "openai>=2.44.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
    "freezegun>=1.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
# jamdict ships no type stubs / py.typed marker
module = ["jamdict", "jamdict.*"]
ignore_missing_imports = true
follow_untyped_imports = true
